<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintDimensionRatio="H,375:239"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/fragment_profile_back"
                    android:layout_marginTop="20dp"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:gravity="center_vertical"
                    >

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"

                        android:src="@drawable/back" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="0dp"
                        >

                        <com.github.siyamed.shapeimageview.mask.PorterShapeImageView
                            android:id="@+id/fragment_profile_avatar"

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="16dp"

                            app:siShape="@drawable/shape_rounded_rectangle"
                            app:siSquare="true"

                            android:src="@drawable/profile"
                            />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            
                            <View
                                android:id="@+id/anchor"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_centerInParent="true"
                                />

                            <View
                                android:layout_width="100dp"
                                android:layout_height="5dp"

                                android:layout_below="@id/anchor"
                                android:layout_marginTop="32dp"
                                android:layout_centerHorizontal="true"

                                android:background="@color/bs_green_neon"


                                />

                        </RelativeLayout>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/fragment_profile_name"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"

                        android:text="CAYKE PRUDENTE"
                        android:textColor="@color/bs_green_neon"
                        android:textSize="21sp"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent" />


                </LinearLayout>


            </LinearLayout>


        </android.support.constraint.ConstraintLayout>


        <LinearLayout
            android:id="@+id/fragment_profile_send_message"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/mail_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_send_message"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_follow_face"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/fb_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_follow_face"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_profile_follow_insta"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/insta_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_follow_instagram"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/fragment_profile_share"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/share_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_share"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_rate_app"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/love_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_rate_app"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_privacy"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/lock_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_privacy"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_logout"

            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"

            android:gravity="center"

            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"

                android:src="@drawable/logout_green" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"

                android:text="@string/profile_logout"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>