<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        >

        <!-- Event cover and close button -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/eventCover"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/closeEvent"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/close_black"
                app:civ_border_color="#FFffff"
                app:civ_border_width="1dp" />


        </RelativeLayout>

        <!-- Nome, endereco, like -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bs_black"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="10° Mostra de Curtas"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/addressTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonLikeEvent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/likeEvent"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_love" />

            </LinearLayout>


        </LinearLayout>

        <!-- Rating and price -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="16dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture_event"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/brasolia_logo_preto"
                />
            <TextView
                android:id="@+id/activity_event_rating"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"

                android:text="8.5/10"
                />

            <TextView
                android:id="@+id/tvMaleTicketPrice"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:layout_centerVertical="true"

                android:text="R$ 30+"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="#D3D3D3">

        </LinearLayout>

        <!-- Descricao -->
            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />

        <!-- Mapa -->
        <RelativeLayout
            android:id="@+id/map_photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="125dp">

                <ImageView
                    android:id="@+id/map_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:background="@color/black" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/secondAddressTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cineb"
                    android:textColor="#fff"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/eventFullAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvEventDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:textColor="#fff"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

        <!-- Botoes share, hour, phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginTop="16dp"
            >


            <LinearLayout
                android:id="@+id/activity_event_share"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"

                android:background="@color/bs_lightGray"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="16dp"

                    android:src="@drawable/ic_event_share"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/share"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_event_call"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"

                android:background="@color/bs_lightGray"

                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="16dp"

                    android:src="@drawable/ic_event_phone"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:id="@+id/activity_event_textview_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="(61) 99999-9999"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_event_hour"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"

                android:background="@color/bs_lightGray"

                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="16dp"

                    android:src="@drawable/ic_event_hour"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/hours"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
        </LinearLayout>

        <!-- Comprar ingresso -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageButton
                android:id="@+id/imageButtonComprarIngresso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/btn_comprar_ingresso"
                android:background="@color/white"
                />

            <ImageButton
                android:id="@+id/imageButtonNomeLista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/btn_nome_lista"
                android:background="@color/white"
                />

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_event_photos_recycler"

            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >

        </android.support.v7.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            />

        <LinearLayout
            android:id="@+id/fieldTypeComment"

            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:padding="10dp"

            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/userComment"

                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                android:hint="@string/leave_comment"

                android:background="#E8E9E8"
                android:inputType="text"
                />

            <Button
                android:id="@+id/sendComment"

                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"

                android:textColor="#fff"
                android:text="ENVIAR"
                android:background="#808080"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_event_recycler_comments"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</ScrollView>
